--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -77,7 +77,7 @@
     </section>
 
     <!-- II.4. Organigramme -->
-    <section class="mb-8 sm:mb-10" data-aos="fade-up">
+    <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Organigramme</h2>
       <p class="text-gray-700 font-bold mb-4 text-sm sm:text-base leading-relaxed">
         Voici l'organigramme simplifié de l'entreprise :
@@ -91,7 +91,7 @@
     </section>
 
     <!-- II.5. Activités et fournisseurs -->
-    <section class="mb-8 sm:mb-10" data-aos="fade-up">
+    <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Activités et fournisseurs</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed">
         DotSafe est une agence bordelaise experte en développement de solutions numériques sur mesure (applications web, mobiles, SaaS) et en conseil digital, notamment en UX/UI, DevOps, performance SI et cybersécurité (audit, pentesting). La société s'appuie sur une philosophie collaborative forte et un environnement technique évolutif
@@ -99,7 +99,7 @@
     </section>
 
     <!-- II.6. Clients -->
-    <section class="mb-8 sm:mb-10" data-aos="fade-up">
+    <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Clients</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed">
         DotSafe intervient auprès de clients prestigieux comme FloaBank, le CNRS, ou encore YouSchool ainsi que des collectivités locales telles que la Mairie d'Annecy ou encore Bordeaux Métropole. Elle réalise pour eux des applications métier personnalisées, des audits de sécurité et des projets de transformation digitale. Cette diversité de clients publics et institutionnels démontre la capacité de DotSafe à répondre à des besoins techniques exigeants et à développer des solutions robustes, sécurisées et adaptées à des organisations variées .
