--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -69,7 +69,7 @@
     </section>
 
     <!-- II.3. Statut juridique -->
-    <section class="mb-8 sm:mb-10" data-aos="fade-up">
+    <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Statut juridique</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed">
         DotSafe est une société SAS, et dont le siège social est situé à BORDEAUX.
