--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -56,7 +56,7 @@
     <section class="mb-8 sm:mb-10" data-aos="fade-up">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Situation géographique</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        L'entreprise DotSafe est située à 125 quai des Chartrons 33300 BORDEAUX.<br><br>
+        L'entreprise DotSafe est située à 125 quai des Chartrons 33300 BORDEAUX.<br>
         Elle bénéficie d'un emplacement stratégique proche de la cité du vin,<br>
         le quai des chartrons et le tram B (Arrêt Cours du Medoc).
       </p>
