--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -65,8 +65,7 @@
     <section class="mb-8 sm:mb-10" data-aos="fade-up">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Historique</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        Fondée en mars 2009, DotSafe s'est rapidement spécialisée dans le secteur<br>
-        du développement web et audit de sécurité (test d'intrusion, formations etc...).<br><br>
+        Fondée en mars 2009, DotSafe s'est rapidement spécialisée dans le secteur du développement web et audit de sécurité (test d'intrusion, formations etc...).<br>
         Depuis sa création, l'entreprise a connu une croissance constante,<br>
         en diversifiant ses services et en élargissant son portefeuille client.
       </p>
