--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -74,8 +74,7 @@
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Statut juridique</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        DotSafe est une société SAS,<br>
-        et dont le siège social est situé à BORDEAUX.
+        DotSafe est une société SAS, et dont le siège social est situé à BORDEAUX.
       </p>
     </section>
 
