--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -96,8 +96,7 @@
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Activités et fournisseurs</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        DotSafe est une agence bordelaise experte en développement<br>
-        de solutions numériques sur mesure (applications web, mobiles, SaaS)<br>
+        DotSafe est une agence bordelaise experte en développement de solutions numériques sur mesure (applications web, mobiles, SaaS)<br>
         et en conseil digital, notamment en UX/UI, DevOps, performance SI<br>
         et cybersécurité (audit, pentesting).<br><br>
         La société s'appuie sur une philosophie collaborative forte<br>
