--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -97,8 +97,7 @@
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Activités et fournisseurs</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
         DotSafe est une agence bordelaise experte en développement de solutions numériques sur mesure (applications web, mobiles, SaaS) et en conseil digital, notamment en UX/UI, DevOps, performance SI et cybersécurité (audit, pentesting).<br>
-        La société s'appuie sur une philosophie collaborative forte<br>
-        et un environnement technique évolutif.
+        La société s'appuie sur une philosophie collaborative forte et un environnement technique évolutif.
       </p>
     </section>
 
