--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -105,14 +105,14 @@
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Clients</h2>
       <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        DotSafe intervient auprès de clients prestigieux comme FloaBank,<br>
-        le CNRS, ou encore YouSchool ainsi que des collectivités locales<br>
-        telles que la Mairie d'Annecy ou encore Bordeaux Métropole.<br><br>
-        Elle réalise pour eux des applications métier personnalisées,<br>
-        des audits de sécurité et des projets de transformation digitale.<br><br>
-        Cette diversité de clients publics et institutionnels démontre<br>
-        la capacité de DotSafe à répondre à des besoins techniques exigeants<br>
-        et à développer des solutions robustes, sécurisées et adaptées<br>
+        DotSafe intervient auprès de clients prestigieux comme FloaBank,
+        le CNRS, ou encore YouSchool ainsi que des collectivités locales
+        telles que la Mairie d'Annecy ou encore Bordeaux Métropole.<br>
+        Elle réalise pour eux des applications métier personnalisées,
+        des audits de sécurité et des projets de transformation digitale.<br>
+        Cette diversité de clients publics et institutionnels démontre
+        la capacité de DotSafe à répondre à des besoins techniques exigeants
+        et à développer des solutions robustes, sécurisées et adaptées
         à des organisations variées.
       </p>
     </section>
