--- a/Rapport de Stage/Index.html
+++ b/Rapport de Stage/Index.html
@@ -60,32 +60,32 @@
       <section data-aos="fade-up">
         <h2 class="text-3xl font-semibold mb-6 border-b pb-2 text-center">Bienvenue 👋</h2>
         <p class="text-gray-700 text-lg mb-8 text-center">
-          Je suis élève de première CIEL au Lycée de Blaye et je vous présente mon rapport de stage sous forme de site! Cliquez sur un bouton ci-dessous pour naviguer :
+          Je suis élève de première CIEL au Lycée Professionnel de Blaye et je vous présente mon rapport de stage sous forme de site! Cliquez sur un bouton ci-dessous pour naviguer :
         </p>
 
 
         <div class="flex flex-col md:flex-row justify-between items-start md:items-center gap-6">
           <div class="space-y-4 w-full md:w-1/2">
             <!-- Boutons -->
-            <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-4">
+            <div class="flex flex-col items-center md:flex-row md:items-center gap-2 md:gap-4">
               <a href="presentation.html" class="button">Présentation</a> 
-              <p class="text-sm text-gray-600 font-bold">Découvrez l'entreprise DotSafe</p>
+              <p class="text-sm text-gray-600 font-bold text-center md:text-left">Découvrez l'entreprise DotSafe</p>
             </div>
-            <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-4">
+            <div class="flex flex-col items-center md:flex-row md:items-center gap-2 md:gap-4">
               <a href="activites.html" class="button">Activités</a>
-              <p class="text-sm text-gray-600 font-bold">Mes missions pendant le stage</p>
+              <p class="text-sm text-gray-600 font-bold text-center md:text-left">Mes missions pendant le stage</p>
             </div>
-            <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-4">
+            <div class="flex flex-col items-center md:flex-row md:items-center gap-2 md:gap-4">
               <a href="etude-de-cas.html" class="button">Étude de cas</a>
-              <p class="text-sm text-gray-600 font-bold">Un projet analysé en profondeur</p>
+              <p class="text-sm text-gray-600 font-bold text-center md:text-left">Un projet analysé en profondeur</p>
             </div>
-            <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-4">
+            <div class="flex flex-col items-center md:flex-row md:items-center gap-2 md:gap-4">
               <a href="conclusion.html" class="button">Conclusion</a>
-              <p class="text-sm text-gray-600 font-bold">Mon retour sur cette expérience.</p>
+              <p class="text-sm text-gray-600 font-bold text-center md:text-left">Mon retour sur cette expérience.</p>
             </div>
-            <div class="flex flex-col md:flex-row md:items-center gap-2 md:gap-4">
+            <div class="flex flex-col items-center md:flex-row md:items-center gap-2 md:gap-4">
               <a href="remerciements.html" class="button">Remerciements</a>
-              <p class="text-sm text-gray-600 font-bold">Merci à ceux qui m'ont accompagné.</p>
+              <p class="text-sm text-gray-600 font-bold text-center md:text-left">Merci à ceux qui m'ont accompagné.</p>
             </div>
           </div>
 
@@ -99,7 +99,7 @@
     </main>
   </div>
   <!-- FOOTER -->
-  <footer class="text-center py-6 text-sm text-gray-500 border-t mt-16" data-aos="fade-up">
+  <footer class="text-center py-6 text-sm text-gray-500 bg-black border-t mt-16">
     &copy; 2025 Aron Pautrot. Tous droits réservés.
   </footer>
 
