--- a/Rapport de Stage/presentation.html
+++ b/Rapport de Stage/presentation.html
@@ -55,8 +55,8 @@
     <!-- II.1. Situation géographique -->
     <section class="mb-8 sm:mb-10" data-aos="fade-up">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Situation géographique</h2>
-      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        L'entreprise DotSafe est située à 125 quai des Chartrons 33300 BORDEAUX.<br>
+      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-justify">
+        L'entreprise DotSafe est située à 125 quai des Chartrons 33300 BORDEAUX.
         Elle bénéficie d'un emplacement stratégique proche de la cité du vin, le quai des chartrons et le tram B (Arrêt Cours du Medoc).
       </p>
     </section>
@@ -64,8 +64,8 @@
     <!-- II.2. Historique -->
     <section class="mb-8 sm:mb-10" data-aos="fade-up">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Historique</h2>
-      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        Fondée en mars 2009, DotSafe s'est rapidement spécialisée dans le secteur du développement web et audit de sécurité (test d'intrusion, formations etc...).<br>
+      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-justify">
+        Fondée en mars 2009, DotSafe s'est rapidement spécialisée dans le secteur du développement web et audit de sécurité (test d'intrusion, formations etc...).
         Depuis sa création, l'entreprise a connu une croissance constante, en diversifiant ses services et en élargissant son portefeuille client.
       </p>
     </section>
@@ -73,7 +73,7 @@
     <!-- II.3. Statut juridique -->
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Statut juridique</h2>
-      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
+      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-justify">
         DotSafe est une société SAS, et dont le siège social est situé à BORDEAUX.
       </p>
     </section>
@@ -81,7 +81,7 @@
     <!-- II.4. Organigramme -->
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Organigramme</h2>
-      <p class="text-gray-700 font-bold mb-4 text-sm sm:text-base leading-relaxed text-left">
+      <p class="text-gray-700 font-bold mb-4 text-sm sm:text-base leading-relaxed text-justify">
         Voici l'organigramme simplifié de l'entreprise :
       </p>
 
@@ -95,8 +95,8 @@
     <!-- II.5. Activités et fournisseurs -->
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Activités et fournisseurs</h2>
-      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
-        DotSafe est une agence bordelaise experte en développement de solutions numériques sur mesure (applications web, mobiles, SaaS) et en conseil digital, notamment en UX/UI, DevOps, performance SI et cybersécurité (audit, pentesting).<br>
+      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-justify">
+        DotSafe est une agence bordelaise experte en développement de solutions numériques sur mesure (applications web, mobiles, SaaS) et en conseil digital, notamment en UX/UI, DevOps, performance SI et cybersécurité (audit, pentesting).
         La société s'appuie sur une philosophie collaborative forte et un environnement technique évolutif.
       </p>
     </section>
@@ -104,12 +104,12 @@
     <!-- II.6. Clients -->
     <section class="mb-8 sm:mb-10">
       <h2 class="text-xl sm:text-2xl font-semibold mb-3 sm:mb-4 text-center sm:text-left">Clients</h2>
-      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-left">
+      <p class="text-gray-700 font-bold text-sm sm:text-base leading-relaxed text-justify">
         DotSafe intervient auprès de clients prestigieux comme FloaBank,
         le CNRS, ou encore YouSchool ainsi que des collectivités locales
-        telles que la Mairie d'Annecy ou encore Bordeaux Métropole.<br>
+        telles que la Mairie d'Annecy ou encore Bordeaux Métropole.
         Elle réalise pour eux des applications métier personnalisées,
-        des audits de sécurité et des projets de transformation digitale.<br>
+        des audits de sécurité et des projets de transformation digitale.
         Cette diversité de clients publics et institutionnels démontre
         la capacité de DotSafe à répondre à des besoins techniques exigeants
         et à développer des solutions robustes, sécurisées et adaptées
